[project]
name="benchpark"
description="An open collaborative repository for cross site benchmarking environments"
readme = "README.rst"
requires-python = ">=3.8"
dynamic = ["version"]

[tool.setuptools]
packages = [
  "lib",
]

[tool.black]
line-length = 88
color = true
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$|bin\/benchpark$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | repo
)/
'''
force-exclude = '''
/(
    '/lib/benchpark/test_repo/(/.*)?$'
  | /lib/benchpark/test_repo(/.*)?$
  | lib/benchpark/test_repo
  | '/bin/benchpark-python'
  | \.github
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true
color_output = true
skip_glob = [
  "lib/benchpark/test_repo/**"
]

[tool.flake8]
exclude = [
  "lib/benchpark/test_repo/**"
]
skip_glob = [
  "lib/benchpark/test_repo/**"
]
force-exclude = [
  "./lib/benchpark/test_repo/**"
]
per-file-ignores = """
    ./lib/benchpark/test_repo/**
"""

[tool.codespell]
skip = './docs/_build,./docs/_static,./taxonomy.yaml,./repo/**/*.patch'
ignore-words-list = 'fom'

[tool.yamlfix]
line-length = 88
allow_duplicate_keys = true
explicit_start = false

[project.optional-dependencies]
analyze = [
  "llnl-hatchet>=2025.2.0",
  "llnl-thicket[plotting]>=2026.1.0",
  "matplotlib"
]
