[package]
name = "dapper"
version = "0.0.0-pre.3"
edition = "2021"
license = "MIT"
description = "Dependency Analysis Project - identifying dependencies in C/C++ code and packages on filesystems"
repository = "https://github.com/LLNL/dapper/"
categories = ["command-line-utilities", "development-tools"]
default-run = "dapper"

[build-dependencies]
cc="1.2"

[dependencies]
tree-sitter = "0.26"
tree-sitter-cpp = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-bash = "0.25.1"
tree-sitter-cmake = "0.7.1"
streaming-iterator = "0.1"
walkdir = "2.5.0"
path-slash = "0.2.1"
rayon = "1.10.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
lazy_static = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
once_cell = "1.21.3"
directories = "6.0.0"
toml = "0.9.8"
serde = { version =  "1.0.228", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking"] }
zip = "6.0"

[dev-dependencies]
tempfile = "3.23"
