[build-system]
requires = ["scikit-build-core >=0.4.3", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "geometry_bindings"
version = "0.0.1"
authors = [
  { name="Sam Mish", email="samuelpmish@gmail.com" },
]
description = "some tools for meshing implicit regions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/samuelpmish/geometry"
"Bug Tracker" = "https://github.com/samuelpmish/geometry/issues"

[tool.scikit-build]
cmake.verbose = true
cmake.args = [
  "-DCMAKE_BUILD_TYPE=Release",
  "-DGEOM_ENABLE_PYTHON_BINDINGS=ON"
]
logging.level = "INFO"

# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

sdist.exclude = ["mathematica"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Skip PyPy, CPython 3.12, see https://github.com/pypa/pip/issues/11501
skip = ["cp312-*", "pp*"]

# Only target 64 bit architectures
archs = ["auto64"] 

# Run pytest to ensure that the package was correctly built
test-command = "python {project}/python/numpy_test.py"
test-requires = "numpy"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"