[project]
name = "mphys-surrogate-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "dask>=2025.11.0",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "plotly>=6.5.0",
    "pysdm>=2.131",
    "pysdm-examples>=2.131",
    "pysindy>=2.0.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "xarray>=2025.11.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
]
