[metadata]
name = protein_tune_rl
version = 1.0.0
author = LLNL
description = Optimization for Protein Language Models
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy<2
    pandas
    click
    seaborn
    biopython
    torch
    transformers<4.50

[options.extras_require]
dev =
    black==22.8.0
    flake8==5.0.4
    isort
folding =
    igfold
